# sweet-spot

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.factory/skills/: sweetspot-enqueue.md  sweetspot-finalize.md  sweetspot-ops.md  sweetspot-reference.md  sweetspot-scout.md  sweetspot-workers.md
.github/workflows/: ci.yml
agent-skills/: sweetspot-enqueue.md  sweetspot-reference.md  sweetspot-run.md  sweetspot-scout.md  sweetspot-workers.md
docs/: case_study_template.md  cli_ux_audit.md  cost_model.md  lifecycle_state_machine.md  production_hardening_roadmap.md  release_checklist.md  reliability_contract.md  setup.md
examples/: lanes.example.json  lanes.mixed-arch.example.json  run_manifest.example.json  setup.example.yaml
examples/hello_world/: hello_worker.py
infra/opentofu/: README.md  batch.tf  data.tf  iam.tf  variables.tf  versions.tf
scripts/: verify_release.sh
spotbatch/: aws_batch.py  cli.py  s3util.py  spot_lane_manager.py  spot_scout.py  task_model.py  worker.py
sweetspot/: adaptive.py  bootstrap_apply.py  bootstrap_aws.py  bootstrap_doctor.py  bootstrap_plan.py  canary_service.py  cli.py  controller.py  enqueue_service.py  finalize_service.py  lane_manager.py  lifecycle.py  output.py  planner.py  reconcile_service.py  repair_service.py  run_state.py  scout.py  setup.py  worker.py
tests/: test_adaptive.py  test_bootstrap_apply.py  test_bootstrap_aws.py  test_bootstrap_plan.py  test_cli.py  test_controller.py  test_cost_model.py  test_lifecycle.py  test_planner.py  test_setup.py  test_worker.py
