[project]
name = "aws-batch-job-runner"
version = "0.1.0"
description = "SpotBatch: durable AWS Batch + SQS + S3 runner for cost-aware Spot workloads."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "SpotBatch contributors"}]
dependencies = ["boto3==1.34.162", "botocore==1.34.162"]

[project.optional-dependencies]
dev = ["mypy==1.14.1", "ruff==0.8.6"]

[project.scripts]
spotbatch = "spotbatch.cli:main"
spotbatch-spot-scout = "spotbatch.spot_scout:main"
spotbatch-lane-manager = "spotbatch.spot_lane_manager:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spotbatch*"]

[tool.ruff]
line-length = 220
target-version = "py310"

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
